--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur architecto consequatur quam repellendus nam ipsum numquam ut asperiores placeat, quas non iste corrupti sint at enim laudantium corporis magnam inventore!
+    Estou alterando o códiog, vc aceita?
 </p>
 </body>
 </html>
